...
    "제어 센터": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Control Center"
          }
        }
      }
    },
    "제어 센터의 'Cue 세트 전환' 컨트롤로도 바꿀 수 있습니다.": {
      "extractionState": "manual",
...
